--- a/index.html
+++ b/index.html
@@ -236,20 +236,20 @@
             <h2>Methods</h2>
             <p>The intrusion detection system employs a variety of machine learning algorithms, including:</p>
             <ul>
-                <li>RandomForestClassifier</li>
-                <li>AdaBoostClassifier</li>
-                <li>GradientBoostingClassifier</li>
-                <li>DecisionTreeClassifier</li>
-                <li>KNeighborsClassifier</li>
-                <li>SVC (Support Vector Classifier)</li>
-                <li>GaussianNB (Naive Bayes)</li>
-                <li>LogisticRegression</li>
-                <li>LinearDiscriminantAnalysis</li>
-                <li>RidgeClassifier</li>
-                <li>ExtraTreesClassifier</li>
-                <li>NeuralNetwork</li>
+                <li>Logistic Regression</li>
+                <li>Random Forest</li>
+                <li>Decision Tree</li>
+                <li>Linear SVC</li>
+                <li>K-Nearest Neighbors</li>
+                <li>Naive Bayes</li>
+                <li>AdaBoost</li>
+                <li>Gradient Boosting Classifier</li>
+                <li>Extra Trees Classifier</li>
+                <li>Ridge Classifier</li>
+                <li>Linear Discriminant Analysis</li>
+                <li>Neural Network</li>
             </ul>
-            <p>These models were implemented using scikit-learn, with LogisticRegression tuned for up to 500 iterations.</p>
+            <p>These models were implemented using scikit-learn, with Logistic Regression tuned for up to 500 iterations.</p>
         </div>
     </section>
 
