--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             height: auto;
             border-radius: 5px;
             margin: 1rem 0;
+            border: 1px solid #444;
         }
 
         footer {
@@ -262,7 +263,7 @@
                 <p>Precision: 0.6318</p>
                 <p>Recall: 0.7068</p>
                 <p>F1-Score: 0.6411</p>
-                <img src="images/logistic_regression_results.png" alt="Logistic Regression Results Visualization">
+                <img src="photos/logic regression.jpg" alt="Logistic Regression Results">
             </div>
 
             <div class="model-container">
@@ -271,7 +272,7 @@
                 <p>Precision: 0.8997</p>
                 <p>Recall: 0.8974</p>
                 <p>F1-Score: 0.8883</p>
-                <img src="images/random_forest_results.png" alt="Random Forest Results Visualization">
+                <img src="photos/random forest.jpg" alt="Random Forest Results">
             </div>
 
             <div class="model-container">
@@ -280,16 +281,16 @@
                 <p>Precision: 0.8444</p>
                 <p>Recall: 0.8427</p>
                 <p>F1-Score: 0.8435</p>
-                <img src="images/decision_tree_results.png" alt="Decision Tree Results Visualization">
+                <img src="photos/decision tree.jpg" alt="Decision Tree Results">
             </div>
 
             <div class="model-container">
-                <h3>Linear SVC (Small Train)</h3>
+                <h3>Linear SVC</h3>
                 <p>Accuracy: 0.7846</p>
                 <p>Precision: 0.7144</p>
                 <p>Recall: 0.7846</p>
                 <p>F1-Score: 0.7192</p>
-                <img src="images/linear_svc_results.png" alt="Linear SVC Results Visualization">
+                <img src="photos/SVC.jpg" alt="Linear SVC Results">
             </div>
 
             <div class="model-container">
@@ -298,7 +299,7 @@
                 <p>Precision: 0.8011</p>
                 <p>Recall: 0.8175</p>
                 <p>F1-Score: 0.7989</p>
-                <img src="images/k_nearest_neighbors_results.png" alt="K-Nearest Neighbors Results Visualization">
+                <img src="photos/KNN.jpg" alt="K-Nearest Neighbors Results">
             </div>
 
             <div class="model-container">
@@ -307,7 +308,7 @@
                 <p>Precision: 0.7012</p>
                 <p>Recall: 0.7757</p>
                 <p>F1-Score: 0.7341</p>
-                <img src="images/naive_bayes_results.png" alt="Naive Bayes Results Visualization">
+                <img src="photos/naive bayes.jpg" alt="Naive Bayes Results">
             </div>
 
             <div class="model-container">
@@ -316,7 +317,7 @@
                 <p>Precision: 0.7012</p>
                 <p>Recall: 0.7757</p>
                 <p>F1-Score: 0.7341</p>
-                <img src="images/adaboost_results.png" alt="AdaBoost Results Visualization">
+                <img src="photos/adaboost.jpg" alt="AdaBoost Results">
             </div>
 
             <div class="model-container">
@@ -324,7 +325,7 @@
                 <p>Precision: 0.8886</p>
                 <p>Recall: 0.8902</p>
                 <p>F1-Score: 0.8817</p>
-                <img src="images/extra_trees_classifier_results.png" alt="Extra Trees Classifier Results Visualization">
+                <img src="photos/extra trees class.jpg" alt="Extra Trees Classifier Results">
             </div>
 
             <div class="model-container">
@@ -332,7 +333,7 @@
                 <p>Precision: 0.8570</p>
                 <p>Recall: 0.8399</p>
                 <p>F1-Score: 0.8066</p>
-                <img src="images/ridge_classifier_results.png" alt="Ridge Classifier Results Visualization">
+                <img src="photos/ridge class.jpg" alt="Ridge Classifier Results">
             </div>
 
             <div class="model-container">
@@ -341,7 +342,7 @@
                 <p>Precision: [To be updated]</p>
                 <p>Recall: [To be updated]</p>
                 <p>F1-Score: [To be updated]</p>
-                <img src="images/linear_discriminant_analysis_results.png" alt="Linear Discriminant Analysis Results Visualization">
+                <img src="photos/Linear dis.jpg" alt="Linear Discriminant Analysis Results">
             </div>
 
             <div class="model-container">
@@ -350,7 +351,7 @@
                 <p>Precision: [To be updated]</p>
                 <p>Recall: [To be updated]</p>
                 <p>F1-Score: [To be updated]</p>
-                <img src="images/neural_network_results.png" alt="Neural Network Results Visualization">
+                <img src="photos/neural network.jpg" alt="Neural Network Results">
             </div>
         </div>
     </section>
